<resources>
    <string name="app_name">Song Seeker</string>
    <string name="songs">Songs</string>
    <string name="playlists">Playlists</string>
    <string name="profile">Profile</string>
    <string name="play_songs">Play Songs</string>
    <string name="save_playlist">Save Playlist</string>
    <string name="refresh_songs">Refresh Songs</string>
    <string name="playlist_options">Playlist Options</string>
    <string name="export_playlist">Export Playlist</string>
    <string name="search_artist">Search Artist</string>
    <string name="clear_playlists">Clear Playlists</string>
    <string name="add_artist">Add Artist</string>
    <string name="import_artists">Import Artists</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="donate">Donate</string>
    <string name="songs_frag_empty_list"> Tap here to get some SONGS!</string>
    <string name="req_add_artists_profile">Please add at least one artist to your profile.</string>
    <string name="playlist_empty">Your playlist is empty! Try changing your playlist options.</string>
    <string name="err_add_songs_playlist">Failed to add songs to the playlist!</string>
    <string name="some_songs_added_playlist">Some songs were successfully added to the playlist!</string>
    <string name="success_add_songs_playlist">Songs added to the playlist!</string>
    <string name="artists_already_profile">Artists already in your profile!</string>
    <string name="err_add_artists_profile">Failed to add the artists to your profile!</string>
    <string name="some_artists_added_profile">Some artists were successfully added to your profile!</string>
    <string name="success_add_artists_profile">Artists successfully added to your profile!</string>
    <string name="check_dms_setting_on">Be sure that the option \'Settings > Share Requests\' is turned on at Dood\'s Music!</string>
    <string name="install_dms">Install Dood\'s Music Streamer to enable this feature!</string>
    <string name="no_song_found">No song found!</string>
    <string name="loading">Loading…</string>
    <string name="mood_str">Mood</string>
    <string name="tempo_str">Tempo</string>
    <string name="danceability_str">Danceability</string>
    <string name="hotness_str">Hotness</string>
    <string name="energy_str">Energy</string>
    <string name="variety_str">Variety</string>
    <string name="max_results_str">Max Results</string>
    <string name="playlist_type">Playlist Type</string>
    <string name="known_artists">Only known artists</string>
    <string name="similar_artists">Known and similar artists</string>
    <string name="shuffle">Shuffle</string>
    <string name="cancel">Cancel</string>
    <string name="album_image">Album Image</string>
    <string name="artist_image">Artist Image</string>
    <string name="play_pause_preview">Play Pause Preview</string>
    <string name="profile_frag_empty_list">Your profile is empty! Add some artists to it or import them from Last.fm or from your device.</string>
    <string name="clear_profile">Clear Profile</string>
    <string name="operation_in_progress">Operation in progress, please wait…</string>
    <string name="artist_name">artist name</string>
    <string name="import_from_device">Import artists from device</string>
    <string name="import_from_lastfm">Import artists from Last.fm</string>
    <string name="import_profile_failed">Failed to import the profile!</string>
    <string name="import_no_artist_found">No artist to import was found!</string>
    <string name="export_to_grooveshark">Export to Grooveshark</string>
    <string name="grooveshark_username">grooveshark username</string>
    <string name="export_to_youtube">Export to YouTube</string>
    <string name="export_to_rdio">Export to Rdio</string>
    <string name="export_to_lastfm">Export to Last.fm</string>
    <string name="lastfm_username">last.fm username</string>
    <string name="remove_artist">Remove Artist</string>
    <string name="remove_song">Remove Song</string>
    <string name="by">by</string>
    <string name="on">on</string>
    <string name="song">Song</string>
    <string name="album">Album</string>
    <string name="artist">Artist</string>
    <string name="watch_on">Watch on YouTube</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="share_with">Share with Friends</string>
    <string name="buy_at">Buy at 7digital</string>
    <string name="add_to_profile">Add to Profile</string>
    <string name="artist_top_songs">Artist\'s Top Songs</string>
    <string name="song_list">Song List</string>
    <string name="artist_albums">Artist\'s Albums</string>
    <string name="artistinfo_bio">Biography >></string>
    <string name="artistinfo_news">News >></string>
    <string name="artistinfo_similar">Similar Artists >></string>
    <string name="share_using">Share using…</string>
    <string name="share_song_text">I discovered a new song using the Song Seeker app for Android! Check it out!</string>
    <string name="share_album_text">I discovered a new album using the Song Seeker app for Android! Check it out!</string>
    <string name="share_artist_text">I discovered a new artist using the Song Seeker app for Android! Check it out!</string>
    <string name="youtube_videos_title">YouTube Videos</string>
    <string name="youtube_videos_frag_empty">No videos found!</string>
    <string name="similar_artists_title">Similar Artists</string>
    <string name="similar_artists_frag_empty">No similar artists found!</string>
    <string name="artist_news_title">News</string>
    <string name="artist_news_frag_empty">No news found!</string>
    <string name="artist_bio_title">Biography</string>
    <string name="artist_bio_frag_empty">No biography found!</string>
    <string name="password">password</string>
    <string name="export_grooveshark_title">Grooveshark Playlists</string>
    <string name="not_authorized">Not Authorized!</string>
    <string name="new_playlist">New Playlist</string>
    <string name="log_in">Log in</string>
    <string name="user_playlists_frag_empty">No playlists found!</string>
    <string name="choose_playlist_export_tip">Choose a playlist to export your songs to, or create a new one.</string>
    <string name="exporting">Exporting…</string>
    <string name="playlist_created">Playlist exported!</string>
    <string name="playlist_name">playlist name</string>
    <string name="importing">Importing…</string>
    <string name="export_youtube_title">YouTube Playlists</string>
    <string name="select_google_account">Select a Google account</string>
    <string name="no_google_account_found">No Google account was found configured in your device!</string>
    <string name="videos">videos</string>
    <string name="playlist_created_by">Playlist created by the Song Seeker app for Android</string>
    <string name="export_lastfm_title">Last.fm Playlists</string>
    <string name="export_rdio_title">Rdio Playlists</string>
    <string name="clear_auth_title_str">Clear Authentications</string>
    <string name="clear_auth_summ_str">Resets authentication from all logged in services</string>
    <string name="clear_cache_title_str">Clear Cache</string>
    <string name="clear_cache_summ_str">Removes cached data stored in your device</string>
    <string name="general_preferences">General Preferences</string>
    <string name="cache_preferences">Cache Preferences</string>
    <string name="auto_clear_cache_title_str">Auto Clear Cache</string>
    <string name="auto_clear_cache_summ_str">Auto clears the cache when it reachs the specified size</string>
    <string name="auth_cleared">Authentications cleared!</string>
    <string name="clearing_cache">Clearing cache, please wait…</string>
    <string name="cache_cleared">Cache cleared!</string>
    <string name="cache_auto_cleared">Cache auto cleared!</string>
    <string name="app_description">Song Seeker is a new way of discovering music that matches to your taste! Find millions of songs with a single click, listen to full length songs or 30s samples, and much more! You can also configure your playlist with several options, export it to other services like YouTube and Grooveshark, and even buy songs that you like! Some of the features are:</string>
    <string name="feature_description_playlist">* Create a personalized playlist: With a single click, you will automatically receive songs that matches your taste!</string>
    <string name="feature_description_play">* Play the songs of your playlist: Play FULL length songs of your playlist for FREE on Dood\'s Music Streamer! (\'Play Songs\' action on \'Songs\' tab)</string>
    <string name="feature_description_profile">* Build a musical taste profile: Add artists to your taste profile or import them from Last.fm or from your device top artists! (\'Add/Import Artists\' actions on \'Profile\' tab)</string>
    <string name="feature_description_export">* Export your playlist: Export the playlist created to other services like YouTube and Grooveshark! (\'Export Playlist\' action on \'Songs\' tab)</string>
    <string name="feature_description_configure">* Configure your playlist: We provide several options to personalize your playlist, like Mood, Tempo and Danceability! You can also filter to songs from artists that you know or similar ones! (\'Playlist Options\' action on \'Songs\' tab)</string>
    <string name="feature_description_more">* And much more! Get information from an artist, songs in an album, watch songs on YouTube, buy them at 7digital…</string>
	<string name="disclaimer_echonest">Music recommendation, artist news, biography provided by The Echo Nest.</string>
	<string name="disclaimer_sevendigital">Song, album, artist information, song samples and buy links provided by 7digital.</string>
	<string name="disclaimer_designer">Launcher icons provided by Lucas Sanchez.</string>
	<string name="disclaimer_rdio">Playlist fetch and export provided by Rdio.</string>
	<string name="disclaimer_grooveshark">Playlist fetch and export provided by Grooveshark.</string>
	<string name="disclaimer_lastfm">User top artists, playlist fetch and export provided by Last.fm.</string>
    <string name="disclaimer_youtube">Video fetch, playlist fetch and export provided by YouTube.</string>
    <string name="disclaimer_app">This product uses The Echo Nest API, 7digital API, Last.fm API, Grooveshark API, Rdio API and YouTube API, but it is not endorsed, certified, approved in any way by the mentioned services.</string>
    <string name="clear_profile_warn_msg">All artists of your profile will be deleted. Are you sure?</string>
    <string name="exception_io">Unable to reach the service provider. Check your internet connection!</string>
    <string name="exception_artist_not_found">Artist not found!</string>
    <string name="exception_song_not_found">Song not found!</string>
    <string name="exception_user_not_found">User not found!</string>
    <string name="exception_try_later">Service unavailable. Try later!</string>
    <string name="exception_not_auth">Not authorized!</string>
    <string name="exception_req_failed">The service informed that the requested operation failed. Try later!</string>
    <string name="exception_unknown">Unknown error!</string>
    <string name="playlists_frag_empty_list">No saved playlists.</string>
    <string name="play_in_dms">Play in Dood\'s Music</string>
    <string name="play_in_grooveshark">Play in Grooveshark Web</string>
    <string name="requires_flash">This feature requires the Flash Player installed.</string>
    <string-array name="auto_clear_cache_entries_preference">
        <item>Off</item>
        <item>2 Mb</item>
        <item>5 Mb</item>
        <item>10 Mb</item>
    </string-array>
    <string-array name="auto_clear_cache_values_preference">
        <item>0</item>
        <item>2</item>
        <item>5</item>
        <item>10</item>
    </string-array>
</resources>