<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/general_preferences" >

        <Preference
            android:key="clear_auth"
            android:summary="@string/clear_auth_summ_str"
            android:title="@string/clear_auth_title_str" >
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/cache_preferences" >

        <Preference
            android:key="clear_cache"
            android:summary="@string/clear_cache_summ_str"
            android:title="@string/clear_cache_title_str" >
        </Preference>

        <ListPreference
            android:defaultValue="10"
            android:entries="@array/auto_clear_cache_entries_preference"
            android:entryValues="@array/auto_clear_cache_values_preference"
            android:key="auto_clear_cache"
            android:summary="@string/auto_clear_cache_summ_str"
            android:title="@string/auto_clear_cache_title_str" />
    </PreferenceCategory>

</PreferenceScreen>