<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_add_artist"
        android:icon="@drawable/ic_action_add"
        android:showAsAction="ifRoom"
        android:title="@string/add_artist"/>
    <item
        android:id="@+id/menu_import_artists"
        android:icon="@drawable/ic_action_import"
        android:showAsAction="ifRoom"
        android:title="@string/import_artists"/>
    <item
        android:id="@+id/menu_settings"
        android:showAsAction="never"
        android:title="@string/settings"/>
    <item
        android:id="@+id/menu_about"
        android:showAsAction="never"
        android:title="@string/about"/>
    <item
        android:id="@+id/menu_donate"
        android:showAsAction="never"
        android:title="@string/donate"/>
</menu>