<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/layout_padding" >

    <RadioButton
        android:id="@+id/export_to_dms"
        style="@style/pl_options_labels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@drawable/btn_radio"
        android:text="@string/export_to_dms" />

    <RadioButton
        android:id="@+id/export_to_grooveshark"
        style="@style/pl_options_labels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@drawable/btn_radio"
        android:text="@string/export_to_grooveshark" />

    <RadioButton
        android:id="@+id/export_to_youtube"
        style="@style/pl_options_labels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@drawable/btn_radio"
        android:text="@string/export_to_youtube" />

    <RadioButton
        android:id="@+id/export_to_rdio"
        style="@style/pl_options_labels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@drawable/btn_radio"
        android:text="@string/export_to_rdio" />

    <RadioButton
        android:id="@+id/export_to_lastfm"
        style="@style/pl_options_labels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@drawable/btn_radio"
        android:text="@string/export_to_lastfm" />

</RadioGroup>